# rate-limiter

./: .bazelproject  .gitignore  CLAUDE.md  MODULE.bazel  Readme.MD
.claude/: PENDING_WORK.md  PROJECT_ROADMAP.md
benchmarks/: .gitignore  BUILD.bazel  README.md  run_all.sh
benchmarks/comparison/: BUILD.bazel  compare.go  parser.go  report.go  visualize.go
benchmarks/go/: BUILD.bazel  README.md  run_benchmarks.sh
benchmarks/java/: AlgorithmBenchmark.java  BUILD.bazel  EngineBenchmark.java
core/algorithms/fixed_window/: BUILD.bazel  FixedWindow.java  FixedWindowTest.java
core/algorithms/sliding_window/: BUILD.bazel  SlidingWindowLog.java  SlidingWindowLogTest.java
core/algorithms/sliding_window_counter/: BUILD.bazel  SlidingWindowCounter.java  SlidingWindowCounterTest.java
core/algorithms/token_bucket/: BUILD.bazel  TokenBucket.java  TokenBucketTest.java
core/clock/: BUILD.bazel  Clock.java  ManualClock.java  SystemClock.java
core/model/: BUILD.bazel  Decision.java  RateLimitResult.java  RateLimiter.java
docs/: design-notes.MD
go/: BUILD.bazel  README.md  go.mod
go/cmd/client/: BUILD.bazel  main.go
go/cmd/realclient/: BUILD.bazel  README.md  main.go
go/cmd/server/: BUILD.bazel  main.go
go/pkg/algorithm/fixedwindow/: BUILD.bazel  fixedwindow.go  fixedwindow_test.go
go/pkg/algorithm/slidingwindow/: BUILD.bazel  slidingwindowlog.go  slidingwindowlog_test.go
go/pkg/algorithm/slidingwindowcounter/: BUILD.bazel  slidingwindowcounter.go  slidingwindowcounter_test.go
go/pkg/algorithm/tokenbucket/: BUILD.bazel  tokenbucket.go  tokenbucket_test.go
go/pkg/clock/: BUILD.bazel  clock.go  clock_test.go  manual_clock.go
go/pkg/engine/: BUILD.bazel  config.go  engine.go  engine_test.go  factory.go  lru.go  lru_test.go
go/pkg/grpcserver/: BUILD.bazel  server.go  server_test.go
go/pkg/model/: BUILD.bazel  model_test.go  ratelimiter.go  result.go
go/pkg/patterns/: BUILD.bazel  patterns_test.go  pipeline.go  worker_pool.go
go/pkg/realclient/: BUILD.bazel  client.go  client_test.go
go/pkg/targets/: BUILD.bazel  targets.go  targets_test.go
java/engine/: AlgorithmType.java  BUILD.bazel  LRUCache.java  LimiterEntry.java  README.md  RateLimiterConfig.java  RateLimiterEngine.java  RateLimiterEngineConcurrencyTest.java  RateLimiterEngineStressTest.java  RateLimiterEngineTest.java  RateLimiterFactory.java
java/grpc/: BUILD.bazel  README.md  RateLimitServer.java  RateLimitServiceImpl.java  RateLimitServiceImplTest.java  RateLimitServiceStressTest.java
proto/: BUILD.bazel  ratelimit.proto
