module(
    name = "rate_limiter_cookbook",
    version = "0.1.0",
)

bazel_dep(name = "rules_java", version = "8.10.0")
bazel_dep(name = "rules_jvm_external", version = "6.7")
bazel_dep(name = "rules_proto", version = "7.0.2")
bazel_dep(name = "protobuf", version = "29.2")
bazel_dep(name = "grpc-java", version = "1.68.1")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "maven",
    artifacts = [
        "org.junit.jupiter:junit-jupiter-api:5.10.3",
        "org.junit.jupiter:junit-jupiter-engine:5.10.3",
        "org.junit.platform:junit-platform-console:1.10.3",
        "org.junit.platform:junit-platform-launcher:1.10.3",
        "org.junit.platform:junit-platform-reporting:1.10.3",
        "org.junit.platform:junit-platform-suite-api:1.10.3",
        "io.grpc:grpc-api:1.68.2",
        "io.grpc:grpc-netty-shaded:1.68.2",
        "io.grpc:grpc-protobuf:1.68.2",
        "io.grpc:grpc-stub:1.68.2",
        "io.grpc:grpc-services:1.68.2",
        "io.grpc:grpc-testing:1.68.2",
        "com.google.protobuf:protobuf-java:4.29.2",
        "javax.annotation:javax.annotation-api:1.3.2",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")