module(
    name = "rate_limiter_cookbook",
    version = "0.1.0",
)

bazel_dep(name = "rules_java", version = "8.10.0")
bazel_dep(name = "rules_jvm_external", version = "6.7")
bazel_dep(name = "rules_proto", version = "7.0.2")
bazel_dep(name = "protobuf", version = "29.2")
bazel_dep(name = "grpc-java", version = "1.68.1")

# Go support
bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "gazelle", version = "0.40.0")

# Explicitly declare rules_apple to prevent loading errors on macOS
# (transitively required by rules_go but not needed for this project)
# Using latest version compatible with Bazel 8.x
bazel_dep(name = "rules_apple", version = "4.0.0", dev_dependency = True)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "maven",
    artifacts = [
        "org.junit.jupiter:junit-jupiter-api:5.10.3",
        "org.junit.jupiter:junit-jupiter-engine:5.10.3",
        "org.junit.platform:junit-platform-console:1.10.3",
        "org.junit.platform:junit-platform-launcher:1.10.3",
        "org.junit.platform:junit-platform-reporting:1.10.3",
        "org.junit.platform:junit-platform-suite-api:1.10.3",
        "io.grpc:grpc-api:1.68.2",
        "io.grpc:grpc-netty-shaded:1.68.2",
        "io.grpc:grpc-protobuf:1.68.2",
        "io.grpc:grpc-stub:1.68.2",
        "io.grpc:grpc-services:1.68.2",
        "io.grpc:grpc-testing:1.68.2",
        "com.google.protobuf:protobuf-java:4.29.2",
        "javax.annotation:javax.annotation-api:1.3.2",
        "org.openjdk.jmh:jmh-core:1.37",
        "org.openjdk.jmh:jmh-generator-annprocess:1.37",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")

# Go SDK setup
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.0")

# Go dependencies from go.mod
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//go:go.mod")
use_repo(
    go_deps,
    "org_golang_google_grpc",
)
