load("@rules_java//java:defs.bzl", "java_library", "java_binary")

java_library(
    name = "benchmark_lib",
    srcs = glob(["*.java"]),
    deps = [
        "//core/algorithms/token_bucket",
        "//core/algorithms/fixed_window",
        "//core/algorithms/sliding_window:sliding_window_log",
        "//core/algorithms/sliding_window_counter",
        "//core/clock",
        "//core/model",
        "//java/engine",
        "@maven//:org_openjdk_jmh_jmh_core",
        "@maven//:org_openjdk_jmh_jmh_generator_annprocess",
    ],
)

java_binary(
    name = "benchmarks",
    main_class = "org.openjdk.jmh.Main",
    runtime_deps = [":benchmark_lib"],
    visibility = ["//benchmarks:__pkg__"],
)
