load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "clock",
    srcs = [
        "Clock.java",
        "ManualClock.java",
        "SystemClock.java",
    ],
    visibility = [
        "//core:__subpackages__",
        "//java:__subpackages__",
        "//benchmarks:__subpackages__",
    ],
)
