load("@rules_java//java:defs.bzl", "java_library", "java_test")

# Core engine library
java_library(
    name = "engine",
    srcs = [
        "AlgorithmType.java",
        "LRUCache.java",
        "LimiterEntry.java",
        "RateLimiterConfig.java",
        "RateLimiterEngine.java",
        "RateLimiterFactory.java",
    ],
    visibility = ["//java:__subpackages__"],
    deps = [
        "//core/algorithms/fixed_window",
        "//core/algorithms/sliding_window:sliding_window_log",
        "//core/algorithms/sliding_window_counter",
        "//core/algorithms/token_bucket",
        "//core/clock",
        "//core/model",
    ],
)

# Core functional tests
java_test(
    name = "engine_test",
    srcs = ["RateLimiterEngineTest.java"],
    args = ["--select-class=rl.java.engine.RateLimiterEngineTest"],
    main_class = "org.junit.platform.console.ConsoleLauncher",
    use_testrunner = False,
    deps = [
        ":engine",
        "//core/clock",
        "//core/model",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_platform_junit_platform_console",
        "@maven//:org_junit_platform_junit_platform_launcher",
        "@maven//:org_junit_platform_junit_platform_reporting",
    ],
)

# Concurrency tests with CountDownLatch
java_test(
    name = "engine_concurrency_test",
    srcs = ["RateLimiterEngineConcurrencyTest.java"],
    args = ["--select-class=rl.java.engine.RateLimiterEngineConcurrencyTest"],
    main_class = "org.junit.platform.console.ConsoleLauncher",
    use_testrunner = False,
    deps = [
        ":engine",
        "//core/clock",
        "//core/model",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_platform_junit_platform_console",
        "@maven//:org_junit_platform_junit_platform_launcher",
        "@maven//:org_junit_platform_junit_platform_reporting",
    ],
)

# Stress and performance tests
java_test(
    name = "engine_stress_test",
    # Longer timeout for stress tests
    timeout = "long",
    srcs = ["RateLimiterEngineStressTest.java"],
    args = ["--select-class=rl.java.engine.RateLimiterEngineStressTest"],
    main_class = "org.junit.platform.console.ConsoleLauncher",
    use_testrunner = False,
    deps = [
        ":engine",
        "//core/clock",
        "//core/model",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_platform_junit_platform_console",
        "@maven//:org_junit_platform_junit_platform_launcher",
        "@maven//:org_junit_platform_junit_platform_reporting",
    ],
)
