load("@rules_java//java:defs.bzl", "java_library", "java_binary", "java_test")

# gRPC service implementation library
java_library(
    name = "grpc_service",
    srcs = ["RateLimitServiceImpl.java"],
    deps = [
        "//proto:ratelimit_java_proto",
        "//proto:ratelimit_java_grpc",
        "//java/engine:engine",
        "//core/model:model",
        "@maven//:io_grpc_grpc_stub",
        "@maven//:io_grpc_grpc_protobuf",
        "@maven//:io_grpc_grpc_api",
    ],
    visibility = ["//java:__subpackages__"],
)

# Server executable
java_binary(
    name = "server",
    srcs = ["RateLimitServer.java"],
    main_class = "rl.java.grpc.RateLimitServer",
    deps = [
        ":grpc_service",
        "//java/engine:engine",
        "//core/clock:clock",
        "@maven//:io_grpc_grpc_netty_shaded",
        "@maven//:io_grpc_grpc_stub",
        "@maven//:io_grpc_grpc_api",
    ],
    visibility = ["//visibility:public"],
)

# Integration tests with InProcessServer
java_test(
    name = "grpc_service_test",
    srcs = ["RateLimitServiceImplTest.java"],
    use_testrunner = False,
    main_class = "org.junit.platform.console.ConsoleLauncher",
    args = ["--select-class=rl.java.grpc.RateLimitServiceImplTest"],
    deps = [
        ":grpc_service",
        "//proto:ratelimit_java_proto",
        "//proto:ratelimit_java_grpc",
        "//java/engine:engine",
        "//core/clock:clock",
        "//core/model:model",
        "@maven//:io_grpc_grpc_stub",
        "@maven//:io_grpc_grpc_protobuf",
        "@maven//:io_grpc_grpc_api",
        "@maven//:io_grpc_grpc_testing",
        "@grpc-java//inprocess",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_platform_junit_platform_launcher",
        "@maven//:org_junit_platform_junit_platform_console",
        "@maven//:org_junit_platform_junit_platform_reporting",
    ],
)
