load("@rules_java//java:defs.bzl", "java_binary", "java_library", "java_test")

# gRPC service implementation library
java_library(
    name = "grpc_service",
    srcs = ["RateLimitServiceImpl.java"],
    visibility = ["//java:__subpackages__"],
    deps = [
        "//core/model",
        "//java/engine",
        "//proto:ratelimit_java_grpc",
        "//proto:ratelimit_java_proto",
        "@maven//:io_grpc_grpc_api",
        "@maven//:io_grpc_grpc_protobuf",
        "@maven//:io_grpc_grpc_stub",
    ],
)

# Server executable
java_binary(
    name = "server",
    srcs = ["RateLimitServer.java"],
    main_class = "rl.java.grpc.RateLimitServer",
    visibility = ["//visibility:public"],
    deps = [
        ":grpc_service",
        "//core/clock",
        "//java/engine",
        "@maven//:io_grpc_grpc_api",
        "@maven//:io_grpc_grpc_netty_shaded",
        "@maven//:io_grpc_grpc_stub",
    ],
)

# Integration tests with InProcessServer
java_test(
    name = "grpc_service_test",
    srcs = ["RateLimitServiceImplTest.java"],
    args = ["--select-class=rl.java.grpc.RateLimitServiceImplTest"],
    main_class = "org.junit.platform.console.ConsoleLauncher",
    use_testrunner = False,
    deps = [
        ":grpc_service",
        "//core/clock",
        "//core/model",
        "//java/engine",
        "//proto:ratelimit_java_grpc",
        "//proto:ratelimit_java_proto",
        "@grpc-java//inprocess",
        "@maven//:io_grpc_grpc_api",
        "@maven//:io_grpc_grpc_protobuf",
        "@maven//:io_grpc_grpc_stub",
        "@maven//:io_grpc_grpc_testing",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_platform_junit_platform_console",
        "@maven//:org_junit_platform_junit_platform_launcher",
        "@maven//:org_junit_platform_junit_platform_reporting",
    ],
)

# Stress and performance tests
java_test(
    name = "grpc_stress_test",
    timeout = "long",
    srcs = ["RateLimitServiceStressTest.java"],
    args = ["--select-class=rl.java.grpc.RateLimitServiceStressTest"],
    main_class = "org.junit.platform.console.ConsoleLauncher",
    use_testrunner = False,
    deps = [
        ":grpc_service",
        "//core/clock",
        "//core/model",
        "//java/engine",
        "//proto:ratelimit_java_grpc",
        "//proto:ratelimit_java_proto",
        "@grpc-java//inprocess",
        "@maven//:io_grpc_grpc_api",
        "@maven//:io_grpc_grpc_protobuf",
        "@maven//:io_grpc_grpc_stub",
        "@maven//:io_grpc_grpc_testing",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_platform_junit_platform_console",
        "@maven//:org_junit_platform_junit_platform_launcher",
        "@maven//:org_junit_platform_junit_platform_reporting",
    ],
)
