load("@rules_java//java:defs.bzl", "java_library", "java_test")

java_library(
    name = "sliding_window_log",
    srcs = ["SlidingWindowLog.java"],
    deps = ["//core/clock:clock", "//core/model:model"],
    visibility = ["//core:__subpackages__"],
)

java_test(
    name = "sliding_window_log_test",
    srcs = ["SlidingWindowLogTest.java"],
    test_class = "rl.core.algorithms.sliding_window.SlidingWindowLogTest",
    deps = [
        ":sliding_window_log",
        "@maven//:org_junit_jupiter_junit_jupiter_api_5_10_3",
        "@maven//:org_junit_jupiter_junit_jupiter_engine_5_10_3",
    ],
)
