load("@rules_java//java:defs.bzl", "java_library", "java_test")

java_library(
    name = "sliding_window_log",
    srcs = ["SlidingWindowLog.java"],
    deps = ["//core/clock:clock", "//core/model:model"],
    visibility = ["//core:__subpackages__"],
)

java_test(
    name = "sliding_window_log_test",
    srcs = ["SlidingWindowLogTest.java"],
    use_testrunner = False,
    main_class = "org.junit.platform.console.ConsoleLauncher",
    args = ["--select-class=rl.core.algorithms.sliding_window.SlidingWindowLogTest"],
    deps = [
        ":sliding_window_log",
        "//core/clock:clock",
        "//core/model:model",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_platform_junit_platform_launcher",
        "@maven//:org_junit_platform_junit_platform_console",
        "@maven//:org_junit_platform_junit_platform_reporting",
    ],
)
