load("@rules_java//java:defs.bzl", "java_library", "java_test")

java_library(
    name = "sliding_window_log",
    srcs = ["SlidingWindowLog.java"],
    visibility = [
        "//core:__subpackages__",
        "//java:__subpackages__",
        "//benchmarks:__subpackages__",
    ],
    deps = [
        "//core/clock",
        "//core/model",
    ],
)

java_test(
    name = "sliding_window_log_test",
    srcs = ["SlidingWindowLogTest.java"],
    args = ["--select-class=rl.core.algorithms.sliding_window.SlidingWindowLogTest"],
    main_class = "org.junit.platform.console.ConsoleLauncher",
    use_testrunner = False,
    deps = [
        ":sliding_window_log",
        "//core/clock",
        "//core/model",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_platform_junit_platform_console",
        "@maven//:org_junit_platform_junit_platform_launcher",
        "@maven//:org_junit_platform_junit_platform_reporting",
    ],
)
