load("@rules_java//java:defs.bzl", "java_library", "java_test")

java_library(
    name = "sliding_window_counter",
    srcs = ["SlidingWindowCounter.java"],
    deps = ["//core/clock:clock", "//core/model:model"],
    visibility = ["//core:__subpackages__"],
)

java_test(
    name = "sliding_window_counter_test",
    srcs = ["SlidingWindowCounterTest.java"],
    test_class = "rl.core.algorithms.sliding_window_counter.SlidingWindowCounterTest",
    deps = [
        ":sliding_window_counter",
        "@maven//:org_junit_jupiter_junit_jupiter_api_5_10_3",
        "@maven//:org_junit_jupiter_junit_jupiter_engine_5_10_3",
    ],
)
