load("@rules_java//java:defs.bzl", "java_library", "java_test")

java_library(
    name = "token_bucket",
    srcs = ["TokenBucket.java"],
    deps = [
        "//core/clock:clock",
        "//core/model:model",
    ],
    visibility = ["//core:__subpackages__"],
)

java_test(
    name = "token_bucket_test",
    srcs = ["TokenBucketTest.java"],
    test_class = "rate-limiter.core.algorithms.token_bucket.TokenBucketTest",
    deps = [
        ":token_bucket",
        "@maven//:org_junit_jupiter_junit_jupiter_api_5_10_3",
        "@maven//:org_junit_jupiter_junit_jupiter_engine_5_10_3",
    ],
)
