load("@rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "client",
    srcs = ["main.go"],
    visibility = ["//visibility:public"],
    deps = [
        "//proto:ratelimit_go_proto",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//status",
    ],
)
