load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "grpcserver",
    srcs = ["server.go"],
    importpath = "github.com/ratelimiter/go/pkg/grpcserver",
    visibility = ["//visibility:public"],
    deps = [
        "//go/pkg/engine",
        "//go/pkg/model",
        "//proto:ratelimit_go_proto",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)

go_test(
    name = "grpcserver_test",
    srcs = ["server_test.go"],
    deps = [
        ":grpcserver",
        "//go/pkg/clock",
        "//go/pkg/engine",
        "//proto:ratelimit_go_proto",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)
